# website-scraper-agent

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
scripts/: test_agent.py
src/agent/: agent.py  groq_agent.py  planner.py
src/api/: app.py
src/frontend/: agent.html  index.html
src/mcp_server/: server.py
src/tools/: fetch_website_pages.py  scrape_website_bs4.py  scrape_website_playwright.py
