[project]
name = "website-scraper-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.137.2",
    "mcp>=1.28.0",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.49.0",
]
